--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,13 @@ body {
     background-color: #2ecc71;
     color: white;
 }
+/* Dodatkowe style dla inputów */
+input[type="email"],
+input[type="password"] {
+    margin-bottom: 15px; /* Dodaj odstęp między inputami */
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
